--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -1,1 +1,8 @@
-dummy=valu1;valu2
+unrecognized =  Keep going…; \
+                I get that… what else?; \
+                I’m listening.; \
+                Tell me more…; \
+                Hmm…; \
+                I get what you’re saying…; \
+                I hear you; \
+                Go on…
