--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -1,8 +1,8 @@
-unrecognized =  Keep going…; \
-                I get that… what else?; \
-                I’m listening.; \
-                Tell me more…; \
-                Hmm…; \
-                I get what you’re saying…; \
+unrecognized =  Keep going...; \
+                I get that... what else?; \
+                I'm listening.; \
+                Tell me more...; \
+                Hmm...; \
+                I get what you're saying...; \
                 I hear you; \
-                Go on…
+                Go on...
