--- a/src/test/resources/inputData.properties
+++ b/src/test/resources/inputData.properties
@@ -1,5 +1,5 @@
 language =  我很焦急; \
-            ?Я чувствую стресс на работе; \
+            Я чувствую стресс на работе; \
             \uD83D\uDE20; \
             \uD83D\uDE2D; \
             \uD83D\uDE24; \
