--- a/src/test/resources/inputData.properties
+++ b/src/test/resources/inputData.properties
@@ -54,6 +54,7 @@ domain =    My upcoming exams are causing me anxiety, what should I do about it?
             I am finding it difficult to pay my bills and this is causing me a lot of stress, what should I do about it?; \
             I am finding it difficult to find a job and this is causing me a lot of stress. Can you give me resources to deal with stress?; \
             How can I deal with stress?; \
+            What are the main causes of stress?; \
             Why am I feeling stressed?; \
             I am binge eating and have trouble sleeping; \
             I am feeling stressed; \
