--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -1,8 +1,42 @@
 unrecognized =  Keep going...; \
-                I get that... what else? ; \
+                I get that... what else?; \
                 I'm listening.; \
                 Tell me more...; \
                 Hmm...; \
                 I get what you're saying...; \
                 I hear you; \
                 Go on...
+
+domain_anxiety = distress; anxiety; anxious; breathing; breath; breaths;\
+                 struggle; worried; control; overwhelming; calm; calmer; scary; distressing;\
+                 scared; scary; worry; Talking to me might help; tough time; experience
+
+domain_stress = struggle; tough time; Talking to me might help; uncomfortable feeling; unpleasant emotion; unpleasantness; \
+                It can be difficult to feel positive about ourselves when we're constantly thinking of the voices outside;\
+                Binge eating; PTSD; keep calm; so much to learn from the setbacks; think of better alternatives for the future; trauma
+
+domain_depression = That can feel like an exhausting battle within; hard to talk about; I can only imagine what you must be going through; \
+                    It is a sign of a strong person to be able to express these feelings.; \
+                    I can see it is hard on you. I am glad you felt comfortable to share this with me.; \
+                    I'm always here to listen to you and help you vent.; depressed; sad; melancholy; overwhelming; sorry; ending your life
+
+domain_concept = Talking to me might help; caused; cause; due to; because; \
+                 A professional can help you manage Depression and daily conversations with me will also help break cycles that you may be stuck in
+
+domain_advice = Short and shallow; Deep and slow; Help me;\
+                Can you tell me a little more about how you are feeling right now?; \
+                A professional can help you manage Depression and daily conversations with me will also help break cycles that you may be stuck in; \
+                You can also check your self-care kit for somethings that might help you.; \
+                Yes, I'm thinking about it
+
+domain_further = Keep going...; \
+                 I get that... what else? ; \
+                 I'm listening.; \
+                 Tell me more...; \
+                 Hmm...; \
+                 I get what you're saying...; \
+                 I hear you; \
+                 Go on...;\
+                 Tell me Himayu, are you having trouble breathing?; \
+                 Shall I suggest you some exercises to calm down?; \
+                 May I suggest some small exercises to help you?
