--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -37,6 +37,6 @@ domain_further = Keep going...; \
                  I get what you're saying...; \
                  I hear you; \
                  Go on...;\
-                 Tell me Himayu, are you having trouble breathing?; \
+                 are you having trouble breathing?; \
                  Shall I suggest you some exercises to calm down?; \
                  May I suggest some small exercises to help you?
