Committed language changes

--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -1,5 +1,5 @@
 unrecognized =  Keep going...; \
-                I get that... what else?; \
+                I get that... what else? ; \
                 I'm listening.; \
                 Tell me more...; \
                 Hmm...; \
@@ -40,3 +40,28 @@ domain_further = Keep going...; \
                  are you having trouble breathing?; \
                  Shall I suggest you some exercises to calm down?; \
                  May I suggest some small exercises to help you?
+
+subject_keywords = Talking; \
+                     anxiety; \
+                     breathing; \
+                     sense; \
+                     Tell me what happened...; \
+                     exercise; \
+                     uncomfortable; \
+                     feelings; \
+                     depression; \
+                     battle; \
+                     not sure; \
+                     comfortable; \
+                     anxious; \
+                     in control; \
+                     unpleasant; \
+                     hear to listen to you; \
+                     depressed; \
+                     exhausting; \
+                     overwhelming; \
+                     opening up; \
+                     must be going through; \
+                     calm; \
+                     really scary; \
+                     here to listen to you
