--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -1,4 +1,4 @@
-unrecognized =  Keep going...; \
+unrecognized_keywords =  Keep going...; \
                 I get that... what else? ; \
                 I'm listening.; \
                 Tell me more...; \
