Committed language changes

--- a/src/test/resources/inputData.properties
+++ b/src/test/resources/inputData.properties
@@ -2,7 +2,7 @@ language =  我很焦急; \
             Я чувствую стресс на работе; \
             \uD83D\uDE20; \
             \uD83D\uDE2D; \
-            \uD83D\uDE24; \
+            \uD83D\uDC7F; \
             \u2639; \
             How can I calm my mind?;\
             What can I do when I can't sleep due to anxiety?;\
@@ -17,9 +17,9 @@ language =  我很焦急; \
             Where can I find information about job related stress?;\
             Why are my stress levels high?;\
             Please help me reduce my stress;\
-            Please share contacts of mental health counsellors;\
+            Please share contacts of mental health counselors;\
             I am stressed;\
-            I am having lot of hairfall;\
+            I am having hair loss;\
             How is depression diagnosed?;\
             What is the best natural antidepressant?;\
             Where to get help for depression in teenagers?;\
@@ -37,7 +37,7 @@ language =  我很焦急; \
             stressed;\
             depressed;\
             abcdsddd@3;\
-            I am feeling sad \u2639
+            I am feeling really depressed right now 😔
 
 domain =    My upcoming exams are causing me anxiety, what should I do about it?;\
             I am feeling very worried about my presentation. Can you give me resources to deal with my anxiety?;\
