--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -64,4 +64,5 @@ subject_keywords = Talking; \
                      must be going through; \
                      calm; \
                      really scary; \
+                     Give yourself time to heal; \
                      here to listen to you
