--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -13,7 +13,7 @@ domain_anxiety = distress; anxiety; anxious; breathing; breath; breaths;\
 
 domain_stress = struggle; tough time; Talking to me might help; uncomfortable feeling; unpleasant emotion; unpleasantness; \
                 It can be difficult to feel positive about ourselves when we're constantly thinking of the voices outside;\
-                Binge eating; PTSD; keep calm; so much to learn from the setbacks; think of better alternatives for the future; trauma
+                Binge eating; PTSD; keep calm; so much to learn from the setbacks; think of better alternatives for the future; trauma: experience; hard to cope with
 
 domain_depression = That can feel like an exhausting battle within; hard to talk about; I can only imagine what you must be going through; \
                     It is a sign of a strong person to be able to express these feelings.; \
