Committed language changes

--- a/src/test/resources/validation.properties
+++ b/src/test/resources/validation.properties
@@ -65,4 +65,8 @@ subject_keywords = Talking; \
                      calm; \
                      really scary; \
                      Give yourself time to heal; \
-                     here to listen to you
+                     here to listen to you; \
+                     breathe; \
+                     breathes; \
+                     manage your emotions
+
